--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,9 @@
         font-size: 24pt;
     }
 </style>
+
 <div>
     <h1>Welcome!</h1><br>
     <p>This site has been visited {{ count }} times.</p>
+	<p>User Name {{ userName }} with ID {{ userId }} </p>
 </div>
