--- a/templates/index.html
+++ b/templates/index.html
@@ -21,4 +21,5 @@
     <h1>Welcome!</h1><br>
     <p>This site has been visited {{ count }} times.</p>
 	<p>User Name {{ userName }} with ID {{ userId }} </p>
+	<p>Request paramaters {{ params }} </p>
 </div>
