--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 
 <div>
     <h1>Welcome!</h1><br>
-    <p>This site has been visited {{ count }} times.</p>
-	<p>User Name {{ userName }} with ID {{ userId }} </p>
-	<p>Request parameters {{ params }} </p>
+    <p>This site has been visited [{{ count }}] times.</p>
+	<p>User Name [{{ userName }}] with ID [{{ userId }}] </p>
+	<p>Request parameters [{{ params }}] </p>
 </div>
