--- a/templates/index.html
+++ b/templates/index.html
@@ -21,5 +21,7 @@
     <h1>Welcome!</h1><br>
     <p>This site has been visited [{{ count }}] times.</p>
 	<p>User Name [{{ userName }}] with ID [{{ userId }}] </p>
-	<p>Request parameters [{{ params }}] </p>
+	<p>Request userName [{{ userNameRequested }}] </p>
+	<p>Request item [{{ itemRequested }}] </p>
+	
 </div>
