First real attempt

--- a/templates/error.html
+++ b/templates/error.html
@@ -18,10 +18,6 @@
 </style>
 
 <div>
-    <h1>Welcome!</h1><br>
-    <p>This site has been visited [{{ count }}] times.</p>
-	<p>User Name [{{ userName }}] with ID [{{ userId }}] </p>
-	<p>Request userName [{{ userName }}] </p>
-	<p>Request item [{{ item }}] </p>
-	
+    <h1>Welcome to Insulin Tracker!</h1><br>
+    <p>Unfortunately you've hit an error: [{{ msg }}]</p>
 </div>
