--- a/templates/good.html
+++ b/templates/good.html
@@ -9,7 +9,7 @@
         margin-top: 50px;
     }
     h1 {
-        color: red;
+        color: green;
         font-size: 40pt;
     }
     p {
@@ -18,10 +18,7 @@
 </style>
 
 <div>
-    <h1>Welcome!</h1><br>
-    <p>This site has been visited [{{ count }}] times.</p>
-	<p>User Name [{{ userName }}] with ID [{{ userId }}] </p>
-	<p>Request userName [{{ userName }}] </p>
-	<p>Request item [{{ item }}] </p>
-	
+    <h1>Insulin Vial Still Viable!</h1><br>
+    <p>Item {{ item }} for {{ userName }} </p>
+	<p>was activated on {{ ts }}, so good for another {{ daysleft }} days.</p>
 </div>
