--- a/templates/activate.html
+++ b/templates/activate.html
@@ -21,4 +21,6 @@
     <h1>New Insulin Vial Activated!</h1><br>
     <p>Item {{ item }} for {{ userName }} </p>
 	<p>has been activated on {{ ts }} </p>
+	<p></p>
+	<a href=https://insulin-tracker.html?n={{userName}}&i={{item}}&r=1">Reset this vial"</a>
 </div>
