--- a/templates/good.html
+++ b/templates/good.html
@@ -21,4 +21,6 @@
     <h1>Insulin Vial Still Viable!</h1><br>
     <p>Item {{ item }} for {{ userName }} </p>
 	<p>was activated on {{ ts }}, so good for another {{ daysleft }} days.</p>
+	<p></p>
+	<a href=https://insulin-tracker.html?n={{userName}}&i={{item}}&r=1">Reset this vial"</a>
 </div>
