--- a/templates/reset.html
+++ b/templates/reset.html
@@ -9,7 +9,7 @@
         margin-top: 50px;
     }
     h1 {
-        color: blue;
+        color: orange;
         font-size: 40pt;
     }
     p {
@@ -18,7 +18,7 @@
 </style>
 
 <div>
-    <h1>New Insulin Vial Activated!</h1><br>
+    <h1>Insulin Vial UnActivated!</h1><br>
     <p>Item {{ item }} for {{ userName }} </p>
-	<p>has been activated on {{ ts }} </p>
+	<p>has been reset on {{ ts }} </p>
 </div>
