--- a/templates/good.html
+++ b/templates/good.html
@@ -20,7 +20,7 @@
 <div>
     <h1>Insulin Vial Still Viable!</h1><br>
     <p>Item {{ item }} for {{ userName }} </p>
-	<p>was activated on {{ ts }}, so good for another {{ daysleft }} days.</p>
+	<p>was activated on {{ ts }}, so good for another {{ timeleft }}.</p>
 	<p></p>
 	<a href=https://insulin-tracker.herokuapp.com/?n={{userName}}&i={{item}}&r=1">Reset this vial"</a>
 </div>
