--- a/templates/stale.html
+++ b/templates/stale.html
@@ -20,7 +20,7 @@
 <div>
     <h1>STOP!  Insulin Vial Stale!</h1><br>
     <p>Item {{ item }} for {{ userName }} </p>
-	<p>was activated on {{ ts }}, so stale by {{ daysleft }} days.</p>
+	<p>was activated on {{ ts }}, so stale by {{ timeexpired }}.</p>
 	<p></p>
 	<a href=https://insulin-tracker.herokuapp.com/?n={{userName}}&i={{item}}&r=1">Reset this vial"</a>
 </div>
