--- a/templates/good.html
+++ b/templates/good.html
@@ -22,5 +22,5 @@
     <p>Item {{ item }} for {{ userName }} </p>
 	<p>was activated on {{ ts }}, so good for another {{ timeleft }}.</p>
 	<p></p>
-	<a href=https://insulin-tracker.herokuapp.com/?n={{userName}}&i={{item}}&r=1">Reset this vial"</a>
+	<a href="https://insulin-tracker.herokuapp.com/?n={{userName}}&i={{item}}&r=1">Reset this vial</a>
 </div>
