--- a/templates/stale.html
+++ b/templates/stale.html
@@ -22,5 +22,6 @@
     <p>Item {{ item }} for {{ userName }} </p>
 	<p>was activated on {{ ts }}, so stale by {{ timeexpired }}.</p>
 	<p></p>
+	<p> RESET TAG [{{ reset }}] </p>
 	<a href="https://insulin-tracker.herokuapp.com/?n={{userName}}&i={{item}}&r=1&">Reset this vial</a>
 </div>
