--- a/templates/good.html
+++ b/templates/good.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8"><link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-<!-- import plugin script -->   <script src="/Chart.min.js"></script>
+<!-- import plugin script -->   <script src="Chart.min.js"></script>
 <style>
     * {
         font-family: "Rubik", "sans-serif";
