--- a/templates/good.html
+++ b/templates/good.html
@@ -25,35 +25,16 @@
 	<p>was activated on {{ ts }}, so good for another {{ timeleft }}.</p>
 	<p></p>
 	<a href="https://insulin-tracker.herokuapp.com/?n={{userName}}&i={{item}}&r=1&">Reset this vial</a>
-
+	<!-- bar chart canvas element --><canvas id="chart" width="600" height="400"></canvas>
+	<script><br />
+	   var pieData = [<br />
+				</p>
+	<p>         ];</p>
+	<p>   // get bar chart canvas<br />
+	   var mychart = document.getElementById("chart").getContext("2d");</p>
+	<p>   steps = 10<br />
+	   max = 10<br />
+	   // draw pie chart<br />
+	   new Chart(document.getElementById("chart").getContext("2d")).Pie(pieData);</p>
+	<p></script>
 </div>
-<!-- bar chart canvas element --><canvas id="chart" width="600" height="400"></canvas>
-<script><br />
-   // bar chart data<br />
-   var barData = {<br />
-   labels : [],<br />
-   datasets : [<br />
-	  {<br />
-			fillColor: "rgba(151,187,205,0.2)",<br />
-			strokeColor: "rgba(151,187,205,1)",<br />
-			pointColor: "rgba(151,187,205,1)",<br />
-		 data : []<br />
-	  }<br />
-	  ]<br />
-   }</p>
-<p>   // get bar chart canvas<br />
-   var mychart = document.getElementById("chart").getContext("2d");</p>
-<p>   steps = 10<br />
-   max = 10<br />
-   // draw bar chart<br />
-   new Chart(mychart).Bar(barData, {<br />
-		scaleOverride: true,<br />
-		scaleSteps: steps,<br />
-		scaleStepWidth: Math.ceil(max / steps),<br />
-		scaleStartValue: 0,<br />
-		scaleShowVerticalLines: true,<br />
-		scaleShowGridLines : true,<br />
-		barShowStroke : true,<br />
-		scaleShowLabels: true<br />
-   });</p>
-<p></script>
