--- a/templates/good.html
+++ b/templates/good.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8"><link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-<!-- import plugin script -->   <script src="Chart.min.js"></script>
+<!-- import plugin script -->   
 <style>
     * {
         font-family: "Rubik", "sans-serif";
@@ -26,6 +26,7 @@
 	<p></p>
 	<a href="https://insulin-tracker.herokuapp.com/?n={{userName}}&i={{item}}&r=1&">Reset this vial</a>
 	<!-- bar chart canvas element --><canvas id="chart" width="600" height="400"></canvas>
+	<script src="Chart.min.js"></script>
 	<script><br />
 	   var pieData = [<br />
 				</p>
