--- a/templates/good.html
+++ b/templates/good.html
@@ -10,32 +10,21 @@
         margin-top: 50px;
     }
     h1 {
-        color: green;
-        font-size: 40pt;
+        color: black;
+        font-size: 80pt;
     }
     p {
-        font-size: 24pt;
+        font-size: 40pt;
     }
 </style>
 <head>
 </head>
+<body style="background-color:#93c47d" >
 <div>
-    <h1>Insulin Vial Still Viable!</h1><br>
+    <h1>Insulin Vial Good!</h1><br>
     <p>Item {{ item }} for {{ userName }} </p>
 	<p>was activated on {{ ts }}, so good for another {{ timeleft }}.</p>
 	<p></p>
 	<a href="https://insulin-tracker.herokuapp.com/?n={{userName}}&i={{item}}&r=1&">Reset this vial</a>
-	<!-- bar chart canvas element --><canvas id="chart" width="600" height="400"></canvas>
-	<script src="Chart.min.js"></script>
-	<script><br />
-	   var pieData = [<br />
-				</p>
-	<p>         ];</p>
-	<p>   // get bar chart canvas<br />
-	   var mychart = document.getElementById("chart").getContext("2d");</p>
-	<p>   steps = 10<br />
-	   max = 10<br />
-	   // draw pie chart<br />
-	   new Chart(document.getElementById("chart").getContext("2d")).Pie(pieData);</p>
-	<p></script>
 </div>
+</body>
