--- a/templates/stale.html
+++ b/templates/stale.html
@@ -18,7 +18,7 @@
 </style>
 <head>
 </head>
-<body style="background-color:#93c47d" >
+<body style="background-color:#DC143C" >
 <div>
     <h1>STOP!  Insulin Vial Stale!</h1><br>
     <p>Item {{ item }} for {{ userName }} </p>
