--- a/templates/activate.html
+++ b/templates/activate.html
@@ -9,14 +9,15 @@
         margin-top: 50px;
     }
     h1 {
-        color: blue;
-        font-size: 40pt;
+        color: black;
+        font-size: 80pt;
     }
     p {
-        font-size: 24pt;
+        font-size: 40pt;
     }
 </style>
 
+<body style="background-color:#ADD8E6" >
 <div>
     <h1>New Insulin Vial Activated!</h1><br>
     <p>Item {{ item }} for {{ userName }} </p>
@@ -25,3 +26,4 @@
 	<a href="https://insulin-tracker.herokuapp.com/?n={{userName}}&i={{item}}&r=1&">Reset this vial</a>
 
 </div>
+</body>
